apps/kalandozas-admin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kalandozas-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kalandozas-admin
  template:
    metadata:
      labels:
        app: kalandozas-admin
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: kalandozas-admin
          image: registry.kvlk.hu/kalandozas-admin:14-c5554ef # {"$imagepolicy": "flux-system:kalandozas-admin-policy"}
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /index.html
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
