apps/kalandozas-admin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kalandozas-admin-service
spec:
  type: ClusterIP
  selector:
    app: kalandozas-admin
  ports:
    - name: kalandozas-admin
      port: 80
      targetPort: http
