apps/kalandozas-admin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kalandozas-admin-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: |
      kube-system-allow-neoline@kubernetescrd,
      kube-system-secure-chain@kubernetescrd
spec:
  tls:
    - hosts:
        - admin.kalandozas.hu
      secretName: kalandozas-tls
  rules:
    - host: admin.kalandozas.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kalandozas-admin-service
                port:
                  number: 80
