apps/kalandozas-admin/networkpolicy.yml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-clients
spec:
  endpointSelector:
    matchLabels:
      app: kalandozas-admin
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
